Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7456

variant properties not displayed in QML Inspector debug view

    XMLWordPrintable

Details

    • 637ae98c6fa27038095e2a691e83817b0fbabf2d

    Description

      property variant (or QVariants) do not display in the QML Inspector.
      e.g
      When the following item is viewed in the QML Inspector
      Item

      { id: variantTest property variant vTest: 10.2 property double dTest: vTest property int iTest: vTest }

      the properties iTest (10) and dTest (10.2) are shown but vTest is absent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ajana Aurindam Jana
            emmet.spier@2d3.com Emmet Spier
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes