BaseEngineDebugClient: Unpack property of type Variant

Task-number: QTCREATORBUG-7456

Change-Id: I6db02007ce4e89f7203530167ca307dc29bd4fe1
Reviewed-by: Christiaan Janssen <christiaan.janssen@nokia.com>